--- a/styles/anniversary.css
+++ b/styles/anniversary.css
@@ -3,20 +3,21 @@
     background-repeat: repeat;
     height: auto;
     display: inline-block;
+    margin-top: 0%;
+    padding-top: 0%;
 }
 
 .header{
-    color: rgb(0, 0, 0);
+    color: aliceblue;
     text-align: center;
-    padding-top: 5%;
     padding-bottom: 5%;
 }
 
 .pic{
-    width: 100%;
+    width: 80%;
     height: auto;
-    padding-top: 15%; 
-    padding-bottom: 15%;
+    padding-top: 10%; 
+    padding-bottom: 10%;
 }
 
 #mainDiv{
@@ -26,6 +27,7 @@
     padding-top: 20px;
     height:auto;
     display:inline-block;
+    text-align: center;
 }
 
 p{
